fixed z-index

--- a/index.css
+++ b/index.css
@@ -65,7 +65,7 @@ main{
     width: 100%;
     height: 100%;
     background-color: var(--Black);
-    z-index: 1;
+    z-index: 4;
 }
 
 .overflow-hidden{
@@ -79,7 +79,20 @@ header {
     background-image: url("images/mobile/image-hero.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    min-width: 375px; 
+    min-width: 375px;
+    position: relative; 
+}
+
+header::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--Black);
+    opacity: 50%;
+    z-index: 1;
 }
 
 
@@ -97,13 +110,16 @@ header h1{
     padding: 5%;
     max-width: 100%;
     border: 3px solid var(--White);
+    position: relative;
+    z-index: 3;
 }
 
 
 .header-content{
     display: flex;
     flex-direction: column;
-    gap: 20vh;
+    gap: 10vh;
+    position: relative;
 }
 
 nav{
@@ -111,7 +127,8 @@ nav{
     align-items: center;
     justify-content: space-between;
     padding: 3rem 0;
-    z-index: 2;
+    position: relative;
+    z-index: 5;
 } 
 
 nav img{
